--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 h1 {
     text-align: center;
-    color: deeppink;
+    color: deepskyblue;
 }
 h2 {
     text-align: center;
@@ -10,8 +10,30 @@ img {
     height: 400;
 }
 img {
-    float: center;
+    float: left;
 }
 h2 {
     text-align: center;
+    color: yellow;
+}
+body {
+    background-color: deeppink;
+}
+em {
+    color: lightgray;
+}
+. box {
+    border: 2px yellow;
+    padding: 6px;
+    margin: 20px;
+    background-color: black;
+}
+. sidebar {
+    width: 30%;
+    float: right;
+    background-color: crimson;
+}
+. column {
+    width: 350px;
+    float: left;
 }
